<resources>
    <string name="app_name">RetrofitGitFlow</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="register">Registrar</string>
    <string name="register_button">Registrarse</string>
    <string name="sign_out">logout</string>
    <string name="no_posts">No hay posts</string>
    <string name="save">Guardar</string>
    <string name="enter_title">Ingrese título</string>
    <string name="hint_content">¿Qué estas pensando?</string>
    <string name="content">Contenido:</string>
    <string name="title">Título:</string>
    <string name="take_photo">Tomar Foto</string>
</resources>
